--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
         <div class="container">
             <div class="filters">
-                <select>
-                    <option value="name">Name</option>
-                    <option value="clan">Clan</option>
-                    <option value="village">Village</option>
+                <select class="select">
+                    <option value="Name">Name</option>
+                    <option value="Clan">Clan</option>
+                    <option value="Village">Village</option>
                 </select>
 
                 <input 
