--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
 </head>
 
 <body>
+    <aside class="sidebar">
+        <h2>Add ninja</h2>
+        <div class="bars">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <form>
+            <div>
+                <input type="text" placeholder="Name" class="name">
+            </div>
+            <div>
+                <input type="text" placeholder="Power" class="power">
+            </div>
+            <div>
+                <input type="text" placeholder="Village" class="village">
+            </div>
+            <div>
+                <input type="text" placeholder="Clan" class="clan">
+            </div>
+            <div>
+                <input type="text" placeholder="Level" class="level">
+            </div>
+            <div>
+                <input type="text" placeholder="Image" class="image">
+            </div>
+            <div>
+                <button class="addNinja">Add</button>
+            </div>
+        </form>
+    </aside>
+
     <header>
         <div class="container">
             <div class="navbar">
