--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <div>
                 <input type="text" placeholder="Image" class="image">
             </div>
+            <div class="error">
+
+            </div>
             <div>
                 <button class="addNinja">Add</button>
             </div>
