--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="navbar">
                 <h2>Anime App</h2>
 
-                <button>Sign out</button>
+                <button class="sigIn">Sign out</button>
             </div>
         </div>
     </header>
