--- a/login.html
+++ b/login.html
@@ -20,13 +20,18 @@
                 <div>
                     <input type="password" placeholder="Password" class="password">
                 </div>
+                <div class="error">
+
+                </div>
                 <div>
-                    <button>Sign in</button>
+                    <button class="signIn">Sign in</button>
                 </div>
                 <a href="./register.html">Don't have an account? Sign Up</a>
             </form>
         </div>
     </div>
+
+    <script src="JS/login.js"></script>
 </body>
 
 </html>
