--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
             <form>
                 <div class="fullName">
                     <input type="text" placeholder="Last name" class="lastName">
-                    <input type="text" placeholder="First name" class="FIrstName">
+                    <input type="text" placeholder="First name" class="fIrstName">
                 </div>
                 <div>
                     <input type="email" placeholder="Email" class="email">
@@ -25,12 +25,17 @@
                 <div>
                     <input type="password" placeholder="Password" class="password">
                 </div>
+                <div class="error">
+                    
+                </div>
                 <div>
-                    <button>Sign up</button>
+                    <button class="signUp">Sign up</button>
                 </div>
                 <a href="./login.html">Already have an account? Sign in</a>
             </form>
         </div>
     </div>
+
+    <script src="js/register.js"></script>
 </body>
 </html>
