feat: add delete

--- a/index.html
+++ b/index.html
@@ -67,11 +67,7 @@
                     <option value="Village">Village</option>
                 </select>
 
-                <input 
-                    type="text" 
-                    placeholder="Search..." 
-                    class="search"
-                >
+                <input type="text" placeholder="Search..." class="search">
             </div>
         </div>
 
