--- a/more.html
+++ b/more.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/more.css">
     <title>More</title>
 </head>
@@ -14,8 +16,12 @@
         <div class="container">
             <div class="navbar">
                 <h2>Anime App</h2>
-
-                <button class="back">Back</button>
+                <div class="navbar_header">
+                    <span class="material-symbols-outlined delete">
+                        delete
+                    </span>
+                    <button class="back">Back</button>
+                </div>
             </div>
         </div>
     </header>
